<resources>
    <string name="app_name">Calcolatrice</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>
    <string name="numberZero">0</string>
    <string name="signPlus">+</string>
    <string name="signMinus">-</string>
    <string name="signDivide">:</string>
    <string name="signMultiple">x</string>
    <string name="squareRoot">√</string>
    <string name="toSquared">^</string>
    <string name="closeSquareRoot">)</string>
    <string name="closeToSquared">)</string>
    <string name="signEquals">=</string>
    <string name="signPeriod">.</string>
    <string name="buttonExit">ESCI</string>
    <string name="buttonCancel">C</string>
    <string name="cancel">Cancella</string>
    <string name="actionOne">Impostazioni</string>
    <string name="actionTwo">Inviaci un\'idea!</string>
    <string name="actionThree">Esci</string>
    <string name="buttonSave">SALVA</string>
    <string name="buttonReset">RESETTA</string>
    <string name="buttonCancel_2">ANNULLA</string>
    <string name="blackTheme">Tema Nero</string>
    <string name="whiteTheme">Tema Bianco</string>
    <string name="blueTheme">Tema Blu</string>
    <string name="themeText">Seleziona un tema:</string>
    <string name="buttonCos">COS</string>
    <string name="buttonSin">SIN</string>
    <string name="buttonCloseCos">)</string>
    <string name="buttonCloseSin">)</string>

</resources>
