<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dave.calcolatrice.Principale"
    android:weightSum="1">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/relativeLayout">

        <EditText
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/numeroEspressione"
            android:textSize="35sp"
            android:editable="false"
            android:enabled="true"
            android:lines="1"
            android:layout_below="@+id/espressioneCompleta"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:id="@+id/pulsanteResettaNumero"
            android:padding="2dp"
            android:layout_width="fill_parent"
            android:src="@android:drawable/ic_delete"
            android:layout_height="match_parent"
            tools:ignore="contentDescription"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/numeroEspressione"
            android:layout_toEndOf="@+id/numeroEspressione"
            android:layout_alignTop="@+id/numeroEspressione" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/espressioneCompleta"
            android:layout_gravity="center_horizontal"
            android:textSize="35sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/numberFour"
            android:id="@+id/pulsanteQuattro"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteUno"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/numberOne"
            android:id="@+id/pulsanteUno"
            android:textSize="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/numberThree"
            android:id="@+id/pulsanteTre"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/pulsanteDue"
            android:layout_toLeftOf="@+id/pulsantePiu"
            android:layout_toStartOf="@+id/pulsantePiu" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/numberTwo"
            android:id="@+id/pulsanteDue"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/pulsanteQuattro"
            android:layout_toEndOf="@+id/pulsanteQuattro" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/numberFive"
            android:id="@+id/pulsanteCinque"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteTre"
            android:layout_toRightOf="@+id/pulsanteQuattro"
            android:layout_toEndOf="@+id/pulsanteQuattro" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/numberSeven"
            android:id="@+id/pulsanteSette"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteQuattro"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/signPlus"
            android:id="@+id/pulsantePiu"
            android:textSize="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/pulsanteNove"
            android:layout_toEndOf="@+id/pulsanteNove" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/signMinus"
            android:id="@+id/pulsanteMeno"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteTre"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/numberEight"
            android:id="@+id/pulsanteOtto"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteCinque"
            android:layout_toRightOf="@+id/pulsanteQuattro"
            android:layout_toEndOf="@+id/pulsanteQuattro" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/numberNine"
            android:id="@+id/pulsanteNove"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteMeno"
            android:layout_toRightOf="@+id/pulsanteCinque"
            android:layout_toEndOf="@+id/pulsanteCinque" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/numberSix"
            android:id="@+id/pulsanteSei"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteUno"
            android:layout_toLeftOf="@+id/pulsantePiu"
            android:layout_toStartOf="@+id/pulsantePiu" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/signMultiple"
            android:id="@+id/pulsantePer"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteCinque"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/signDivide"
            android:id="@+id/pulsanteDiviso"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteOtto"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/signEquals"
            android:id="@+id/pulsanteUguale"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteDiviso"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/numberZero"
            android:id="@+id/pulsanteZero"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteSette"
            android:layout_toLeftOf="@+id/pulsanteNove"
            android:layout_toStartOf="@+id/pulsanteNove" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="C"
            android:id="@+id/pulsanteCancella"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteSette"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/signPeriod"
            android:id="@+id/pulsantePunto"
            android:textSize="30dp"
            android:layout_below="@+id/pulsanteSette"
            android:layout_alignRight="@+id/pulsanteNove"
            android:layout_alignEnd="@+id/pulsanteNove" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/squareRoot"
            android:id="@+id/pulsanteRadice"
            android:textSize="30dp"
            android:enabled="true"
            android:visibility="visible"
            android:layout_alignTop="@+id/pulsantePotenza"
            android:layout_toRightOf="@+id/pulsanteEsci"
            android:layout_toEndOf="@+id/pulsanteEsci" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/toSquared"
            android:id="@+id/pulsantePotenza"
            android:textSize="30dp"
            android:layout_alignTop="@+id/pulsanteUguale"
            android:layout_toLeftOf="@+id/pulsanteUguale"
            android:layout_toStartOf="@+id/pulsanteUguale" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/buttonExit"
            android:id="@+id/pulsanteEsci"
            android:textSize="20dp"
            android:layout_alignTop="@+id/pulsanteRadice"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/closeToSquared"
            android:id="@+id/pulsanteChiudiPotenza"
            android:textSize="30dp"
            android:visibility="invisible"
            android:enabled="true"
            android:layout_alignTop="@+id/pulsanteRadice"
            android:layout_toRightOf="@+id/pulsanteRadice"
            android:layout_toEndOf="@+id/pulsanteRadice" />

        <Button
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:text="@string/closeSquareRoot"
            android:id="@+id/pulsanteChiudiRadice"
            android:textSize="30dp"
            android:visibility="invisible"
            android:enabled="true"
            android:layout_alignTop="@+id/pulsanteRadice"
            android:layout_toRightOf="@+id/pulsanteEsci"
            android:layout_toEndOf="@+id/pulsanteEsci" />

    </RelativeLayout>
 </ScrollView>
</LinearLayout>
